--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 	<body>
 		<header>
-			<h1 class="titulo-principal">Lefex FS</h1>
+			<h1 class="titulo-principal">Lefex FootbalStore</h1>
 		</header>
 		<img id="banner" src="banner.jpg">
 		<div class="principal">
@@ -16,9 +16,9 @@
 	 
 			<p>o site da <strong>Lefex FS</strong> traz para o mercado o que há de melhor para a pratica do seu querido futebol. Fundada em 2023, a Lefex já é destaque no Parana e conquista novos clientes a cada dia.</p>
 
-			<p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
+			<p id="missao"><em>Nossa missão é: <strong>"Proporcionar conforto e qualidade ao praticar o esporte."</strong>.</em></p>
 
-			<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+			<p>Oferecemos atendentes que trabalham de segunda a segunda e antenados às mudanças no mundo do esporte. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
 		</div>
 
 		<div class="beneficios">
