--- a/index.html
+++ b/index.html
@@ -25,10 +25,9 @@
 			<h3 class="titulo-centralizado">Benefícios</h3>
 
 			<ul>
-				<li class="itens">Atendimento aos Clientes</li>
-				<li class="itens">Espaço diferenciado</li>
-				<li class="itens">Localização</li>
-				<li class="itens">Profissionais Qualificados</li>
+				<li class="itens">envio em 24hrs.</li>
+				<li class="itens">Site e whatssap.</li>
+				<li class="itens">Garantia nos produtos.</li>
 			</ul>
 
 			<img src="beneficios.jpg" class="imagembeneficios">
