--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 			<h3 class="titulo-centralizado">Benefícios</h3>
 
 			<ul>
-				<li class="itens">Envio em 24hrs.</li>
+				<li class="itens">E	'nvio em 24hrs.</li>
 				<li class="itens">Site e whatssap.</li>
 				<li class="itens">Garantia nos produtos.</li>
 			</ul>
 
-			<img src="beneficios.jpg" class="imagembeneficios">
+			<img src="nike-air-zoom-mercurial-vapor-15-fg-elite-lucent-amarela-nova-lancamentochuteira-campo-original-importada-profissional-adulta-mas-71-1edf084d3ce6c9bb4a16699097769471-1024-1024.jpeg" class="imagembeneficios">
 		</div>
 	</body>
 </html>
