--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<header>
 			<h1 class="titulo-principal">Lefex FootbalStore</h1>
 		</header>
-		<img id="banner" src="banner.jpg">
+		<img id="banner" src="download.jpeg">
 		<div class="principal">
 			<h2 class="titulo-centralizado">Sobre a Lefex</h2>
 	 
