--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<header>
 			<h1 class="titulo-principal">Lefex FootbalStore</h1>
 		</header>
-		<img id="banner" src="download.jpeg">
+		<img id="banner" src="marcas-esportivas-de-logotipos-vetoriais-coleção-adidas-novo-saldo-sob-armor-jordan-kappa-asics-reebok-nike-vans-converse-222305695.webp">
 		<div class="principal">
 			<h2 class="titulo-centralizado">Sobre a Lefex</h2>
 	 
