--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<h3 class="titulo-centralizado">Benefícios</h3>
 
 			<ul>
-				<li class="itens">E	'nvio em 24hrs.</li>
+				<li class="itens">Envio em 24hrs.</li>
 				<li class="itens">Site e whatssap.</li>
 				<li class="itens">Garantia nos produtos.</li>
 			</ul>
