--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 	<head>
 		<meta charset="UTF-8">
-		<title><font>Arial</font>Lefex FootbalStore</title>
+		<title><font>Impact</font>Lefex FootbalStore</title>
 		<link rel="stylesheet" href="style.css">
 	</head>
 
