--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="pt-br">
 	<head>
 		<meta charset="UTF-8">
-		<title>Lefex FootbalStore</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@900&display=swap" rel="stylesheet"><title>Lefex FootbalStore</title>
 		<link rel="stylesheet" href="style.css">
+		font-family: 'Roboto Slab', serif;
 	</head>
 
 	<body>
