--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 	<head>
 		<meta charset="UTF-8">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@900&display=swap" rel="stylesheet"><title>Lefex FootbalStore</title>
-		<link rel="stylesheet" href="style.css">
-		font-family: 'Roboto Slab', serif;
 	</head>
 
 	<body>
 		<header>
+			<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Collegiate+One:ital@1&family=Roboto+Slab:wght@900&display=swap" rel="stylesheet">
+font-family: 'Alumni Sans Collegiate One', sans-serif;
+font-family: 'Roboto Slab', serif;
 			<h1 class="titulo-principal">Lefex FootbalStore</h1>
 		</header>
 		<img id="banner" src="marcas-esportivas-de-logotipos-vetoriais-coleção-adidas-novo-saldo-sob-armor-jordan-kappa-asics-reebok-nike-vans-converse-222305695.webp">
